Make stream URL configurable and add a README.md